[레거시 코드 리팩터링 - 2단계] 로건(정다빈) 미션 제출합니다. (#616)
* docs: 기능 목록 재작성
조금 더 도메인에 집중할 수 있는 내용으로 변경

* refactor: MenuService 리팩터링

* refactor: MenuGroup 리팩터링

* refactor: OrderService 리팩터링

* refactor: ProductService 리팩터링

* refactor: TableGroupService 리팩터링

* refactor: TableService 리팩터링

* refactor: 도메인 리팩터링

* refactor: dto 리팩터링

* refactor: Controller 리팩터링

* test: Order 도메인 테스트 추가

* style: 코드 포맷 수정

* refactor: 서비스 코드 리팩터링

* refactor: 도메인 JPA 적용

* refactor: DTO JPA에 맞게 수정

* refactor: JPA 리포지토리 구현, DAO 삭제

* refactor: JPA로 인한 서비스, 도메인 리팩터링

* refactor: ddl-auto 옵션 설정

* refactor: JPA로 인한 테스트 코드 리팩터링

* refactor: response 정적 팩토리 메서드 네이밍 수정

* refactor: 사용하지 않는 필드 제거

* refactor: OrderStatus 필드를 String -> OrderStatus로 변경

* refactor: Order도 EntityListener를 통해 생성 시간을 설정할 수 있도록 수정

* refactor: 추상 클래스로 변경

* style: 코드 포맷 설정

* refactor: 테스트 격리를 AbstractTestExecutionListener에서 TestExecutionListener로 변경

* refactor: price 필드에 decimal(19, 2) 옵션 추가

* refactor: 의미없는 저장 삭제

* refactor: DTO 네이밍 변경
OrderTableRequest -> OrderTableInTableGroupDto

* refactor: DTO 네이밍 변경
OrderLineItemRequest -> OrderLineItemInOrderDto

* refactor: 필요한 Service, Repository만 사용할 수 있도록 테스트 필드 수정

* refactor: 주문이 완료 상태가 아닌지 판단하는 로직을 도메인으로 이동

* refactor: Wrapper 타입을 Primitive 타입으로 변경
기존 레거시 요청 타입을 그대로 따라감

* fix: 검증 로직 반대로 변경

* refactor: 검증 로직 조건 2개를 1개씩으로 분리, 예외 메시지 각각 다르게 수정

* refactor: 주문 테이블만 등록할 수 있도록 수정

* refactor: Price 안에 덧셈, 곱하기, 0원 객체를 생성할 수 있도록 도메인 로직 추가

* style: 코드 포맷 수정

* docs: 기능 목록 수정